[gd_scene load_steps=35 format=3 uid="uid://dn0b8hq6iasrx"]

[ext_resource type="Script" path="res://scenes/frame_player/text_box.gd" id="1_aporf"]
[ext_resource type="PackedScene" uid="uid://6jobhq66ma72" path="res://addons/rewind_story_engine/scene_builder/scene_builder.tscn" id="1_k8j7s"]
[ext_resource type="Script" path="res://scenes/frame_player/frame_player.gd" id="1_s8ibl"]
[ext_resource type="Texture2D" uid="uid://dxi8pjgq7xko1" path="res://gui/Мелочи/Игра/Для текста/2.png" id="5_tf6n5"]
[ext_resource type="Texture2D" uid="uid://d1lfq8nd4lfrr" path="res://gui/Мелочи/Игра/Для текста/Плашка для текста 1.png" id="6_2j1jh"]
[ext_resource type="Theme" uid="uid://c4e2ygeqqqaxy" path="res://scenes/frame_player/frame_player_theme.tres" id="7_eyx6w"]
[ext_resource type="Script" path="res://scenes/frame_player/selection_menu.gd" id="7_pim0h"]
[ext_resource type="Theme" uid="uid://b20uw8pswcq8l" path="res://theme.tres" id="8_0c082"]
[ext_resource type="Texture2D" uid="uid://cnnrtqxiuu0xb" path="res://gui/Мелочи/Игра/Авто.png" id="8_3xo1e"]
[ext_resource type="Script" path="res://scenes/frame_player/logger.gd" id="8_bvskx"]
[ext_resource type="Texture2D" uid="uid://xs2mituqujh6" path="res://addons/rewind_story_engine/icons/Close.svg" id="9_e67gh"]
[ext_resource type="Texture2D" uid="uid://3o1n7f350g6m" path="res://gui/Мелочи/Игра/Нажатие/Авто.png" id="9_iqu7r"]
[ext_resource type="Theme" uid="uid://o18on08dn11a" path="res://scenes/menu/menu_buttons.tres" id="9_rvy5s"]
[ext_resource type="Texture2D" uid="uid://c67af0vb8klu0" path="res://gui/Мелочи/Игра/Показать лог.png" id="10_05wx5"]
[ext_resource type="Texture2D" uid="uid://cx036c56hmbai" path="res://gui/Мелочи/Игра/Нажатие/Пауза.png" id="10_lpdl1"]
[ext_resource type="Texture2D" uid="uid://7ybdrr1lmfdi" path="res://gui/Мелочи/Игра/Нажатие/Показать лог.png" id="11_uvccp"]
[ext_resource type="Script" path="res://scenes/frame_player/sfx_player.gd" id="11_vmq50"]
[ext_resource type="Texture2D" uid="uid://kkwxhth717yn" path="res://gui/Мелочи/Игра/Скрыть интерфейс.png" id="12_7vcix"]
[ext_resource type="Script" path="res://scenes/frame_player/bgs_player.gd" id="12_ys6nd"]
[ext_resource type="Texture2D" uid="uid://pbd2d6o67cfs" path="res://gui/Мелочи/Игра/Нажатие/Скрыть интерфейс.png" id="13_1wpnn"]
[ext_resource type="Script" path="res://scenes/frame_player/music_player.gd" id="13_6njry"]
[ext_resource type="Texture2D" uid="uid://chp6ynk6noitc" path="res://gui/Мелочи/Игра/Предыдущий кадр.png" id="14_mougi"]
[ext_resource type="Texture2D" uid="uid://c2xrimte7ays1" path="res://gui/Мелочи/Игра/Нажатие/Предыдущий кадр.png" id="15_6sg52"]
[ext_resource type="Texture2D" uid="uid://c8f18255sm00w" path="res://gui/Мелочи/Игра/Следующий кадр.png" id="16_pti3f"]
[ext_resource type="Texture2D" uid="uid://d4ckrrm703340" path="res://gui/Мелочи/Игра/Нажатие/Следующий кадр.png" id="17_dm1k2"]
[ext_resource type="Texture2D" uid="uid://b6120qec0nk2n" path="res://gui/Мелочи/Игра/Перемотка.png" id="18_w0tjf"]
[ext_resource type="Texture2D" uid="uid://dp0hmwblyq4d2" path="res://gui/Мелочи/Игра/Нажатие/Перемотка.png" id="19_kimg4"]
[ext_resource type="Theme" uid="uid://cgymxxcr7u4ai" path="res://scenes/save_manager/save_theme.tres" id="20_pk4gw"]
[ext_resource type="Script" path="res://source/button_with_sound.gd" id="23_s1i53"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x53o4"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_u8la7"]
texture = ExtResource("10_lpdl1")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_i3bp3"]
texture = ExtResource("10_lpdl1")

[sub_resource type="InputEventAction" id="InputEventAction_nj2hj"]
action = &"pause"

[sub_resource type="Shortcut" id="Shortcut_58d3f"]
events = [SubResource("InputEventAction_nj2hj")]

[node name="FramePlayer" type="Control" node_paths=PackedStringArray("interface_container", "text_box", "selection_menu", "logger", "scene_builder", "pause_button", "auto_play_button", "music_player", "bgs_player", "sfx_player")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s8ibl")
interface_container = NodePath("Interface")
text_box = NodePath("Interface/TextBox")
selection_menu = NodePath("Interface/SelectionMenu")
logger = NodePath("Interface/Logger")
scene_builder = NodePath("SubViewportContainer/SubViewport/SceneBuilder")
pause_button = NodePath("Interface/Pause")
auto_play_button = NodePath("Interface/TextBox/Buttons/Auto")
music_player = NodePath("MusicPlayer")
bgs_player = NodePath("BGSPlayer")
sfx_player = NodePath("SFXPlayer")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
msaa_2d = 3
canvas_item_default_texture_filter = 2
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="SceneBuilder" parent="SubViewportContainer/SubViewport" instance=ExtResource("1_k8j7s")]

[node name="Interface" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextBox" type="Control" parent="Interface" node_paths=PackedStringArray("speaker_label", "text_label", "marker")]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -200.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_aporf")
speaker_label = NodePath("Speaker")
text_label = NodePath("Text/Label")
marker = NodePath("Marker")

[node name="Background" type="TextureRect" parent="Interface/TextBox"]
modulate = Color(1, 1, 1, 0.909804)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -60.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_2j1jh")
expand_mode = 1

[node name="Speaker" type="RichTextLabel" parent="Interface/TextBox"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -760.0
offset_top = -80.0
offset_right = -160.0
offset_bottom = -40.0
theme = ExtResource("7_eyx6w")
bbcode_enabled = true
text = "[color=orange]Рассказчик"
scroll_active = false

[node name="Text" type="MarginContainer" parent="Interface/TextBox"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -800.0
offset_right = 800.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 70
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 40

[node name="Label" type="RichTextLabel" parent="Interface/TextBox/Text"]
layout_mode = 2
theme = ExtResource("7_eyx6w")
bbcode_enabled = true
text = "Здесь будет выводиться текст."
fit_content = true
scroll_active = false
visible_characters_behavior = 1

[node name="Marker" type="TextureRect" parent="Interface/TextBox"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -57.0
offset_right = 29.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("5_tf6n5")
expand_mode = 1

[node name="Buttons" type="Control" parent="Interface/TextBox"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 730.0
offset_top = -40.0
offset_right = 770.0
grow_horizontal = 2
grow_vertical = 2

[node name="Auto" type="TextureButton" parent="Interface/TextBox/Buttons"]
layout_mode = 0
offset_left = 1.0
offset_top = 2.0
offset_right = 61.0
offset_bottom = 42.0
tooltip_text = "Автоматическая перемотка (A)"
toggle_mode = true
texture_normal = ExtResource("8_3xo1e")
texture_pressed = ExtResource("9_iqu7r")
texture_hover = ExtResource("9_iqu7r")
ignore_texture_size = true
stretch_mode = 4

[node name="Log" type="TextureButton" parent="Interface/TextBox/Buttons"]
layout_mode = 0
offset_left = 76.0
offset_top = -1.0
offset_right = 116.0
offset_bottom = 39.0
tooltip_text = "Показать лог (L)"
texture_normal = ExtResource("10_05wx5")
texture_pressed = ExtResource("11_uvccp")
texture_hover = ExtResource("11_uvccp")
ignore_texture_size = true
stretch_mode = 4

[node name="Hide" type="TextureButton" parent="Interface/TextBox/Buttons"]
layout_mode = 0
offset_left = 132.0
offset_top = 1.0
offset_right = 172.0
offset_bottom = 41.0
tooltip_text = "Скрыть интерфейс (H)"
texture_normal = ExtResource("12_7vcix")
texture_pressed = ExtResource("13_1wpnn")
texture_hover = ExtResource("13_1wpnn")
ignore_texture_size = true
stretch_mode = 4

[node name="Prev" type="TextureButton" parent="Interface/TextBox/Buttons"]
layout_mode = 0
offset_left = 22.0
offset_top = 46.0
offset_right = 62.0
offset_bottom = 86.0
tooltip_text = "Предыдущий кадр (колёсико вверх)"
texture_normal = ExtResource("14_mougi")
texture_pressed = ExtResource("15_6sg52")
texture_hover = ExtResource("15_6sg52")
ignore_texture_size = true
stretch_mode = 4

[node name="Next" type="TextureButton" parent="Interface/TextBox/Buttons"]
layout_mode = 0
offset_left = 72.0
offset_top = 45.0
offset_right = 112.0
offset_bottom = 85.0
tooltip_text = "Следующий кадр (ЛКМ или колёсико вниз)"
texture_normal = ExtResource("16_pti3f")
texture_pressed = ExtResource("17_dm1k2")
texture_hover = ExtResource("17_dm1k2")
ignore_texture_size = true
stretch_mode = 4

[node name="Rewind" type="TextureButton" parent="Interface/TextBox/Buttons"]
layout_mode = 0
offset_left = 129.0
offset_top = 50.0
offset_right = 169.0
offset_bottom = 90.0
tooltip_text = "Перемотка (держать Left CTRL)"
texture_normal = ExtResource("18_w0tjf")
texture_pressed = ExtResource("19_kimg4")
texture_hover = ExtResource("19_kimg4")
ignore_texture_size = true
stretch_mode = 4

[node name="SelectionMenu" type="VBoxContainer" parent="Interface"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("7_pim0h")
button_theme = ExtResource("20_pk4gw")

[node name="Pause" type="Button" parent="Interface"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -940.0
offset_top = -520.0
offset_right = -866.0
offset_bottom = -477.0
focus_mode = 0
theme = ExtResource("9_rvy5s")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_x53o4")
theme_override_styles/hover = SubResource("StyleBoxTexture_u8la7")
theme_override_styles/pressed = SubResource("StyleBoxTexture_i3bp3")
shortcut = SubResource("Shortcut_58d3f")
shortcut_in_tooltip = false
text = "Пауза"
script = ExtResource("23_s1i53")

[node name="Logger" type="Control" parent="Interface" node_paths=PackedStringArray("text_label")]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_bvskx")
text_label = NodePath("MarginContainer/RichTextLabel")

[node name="ColorRect" type="ColorRect" parent="Interface/Logger"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.941176)

[node name="MarginContainer" type="MarginContainer" parent="Interface/Logger"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 160
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 160
theme_override_constants/margin_bottom = 80

[node name="RichTextLabel" type="RichTextLabel" parent="Interface/Logger/MarginContainer"]
layout_mode = 2
theme = ExtResource("7_eyx6w")
bbcode_enabled = true
text = "[table=3]"
scroll_following = true
threaded = true

[node name="Close" type="Button" parent="Interface/Logger"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -116.0
offset_top = 50.0
offset_right = -92.0
offset_bottom = 74.0
grow_horizontal = 0
theme = ExtResource("8_0c082")
icon = ExtResource("9_e67gh")
flat = true
script = ExtResource("23_s1i53")

[node name="VoicePlayer" type="AudioStreamPlayer" parent="."]

[node name="SFXPlayer" type="Node" parent="."]
script = ExtResource("11_vmq50")

[node name="BGSPlayer" type="Node" parent="."]
script = ExtResource("12_ys6nd")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
bus = &"Music"
script = ExtResource("13_6njry")

[connection signal="bgs" from="SubViewportContainer/SubViewport/SceneBuilder" to="." method="_on_scene_builder_bgs"]
[connection signal="music" from="SubViewportContainer/SubViewport/SceneBuilder" to="." method="_on_scene_builder_music"]
[connection signal="finished" from="Interface/TextBox" to="." method="_on_text_box_finished"]
[connection signal="mouse_entered" from="Interface/TextBox/Buttons/Auto" to="." method="_on_gui_mouse_entered"]
[connection signal="mouse_exited" from="Interface/TextBox/Buttons/Auto" to="." method="_on_gui_mouse_exited"]
[connection signal="toggled" from="Interface/TextBox/Buttons/Auto" to="." method="set_auto_play"]
[connection signal="mouse_entered" from="Interface/TextBox/Buttons/Log" to="." method="_on_gui_mouse_entered"]
[connection signal="mouse_exited" from="Interface/TextBox/Buttons/Log" to="." method="_on_gui_mouse_exited"]
[connection signal="pressed" from="Interface/TextBox/Buttons/Log" to="." method="_show_logger"]
[connection signal="mouse_entered" from="Interface/TextBox/Buttons/Hide" to="." method="_on_gui_mouse_entered"]
[connection signal="mouse_exited" from="Interface/TextBox/Buttons/Hide" to="." method="_on_gui_mouse_exited"]
[connection signal="pressed" from="Interface/TextBox/Buttons/Hide" to="." method="switch_interface_visability"]
[connection signal="mouse_entered" from="Interface/TextBox/Buttons/Prev" to="." method="_on_gui_mouse_entered"]
[connection signal="mouse_exited" from="Interface/TextBox/Buttons/Prev" to="." method="_on_gui_mouse_exited"]
[connection signal="pressed" from="Interface/TextBox/Buttons/Prev" to="." method="prev_frame"]
[connection signal="mouse_entered" from="Interface/TextBox/Buttons/Next" to="." method="_on_gui_mouse_entered"]
[connection signal="mouse_exited" from="Interface/TextBox/Buttons/Next" to="." method="_on_gui_mouse_exited"]
[connection signal="pressed" from="Interface/TextBox/Buttons/Next" to="." method="next_frame"]
[connection signal="button_down" from="Interface/TextBox/Buttons/Rewind" to="." method="_start_rewind"]
[connection signal="button_up" from="Interface/TextBox/Buttons/Rewind" to="." method="_stop_rewind"]
[connection signal="mouse_entered" from="Interface/TextBox/Buttons/Rewind" to="." method="_on_gui_mouse_entered"]
[connection signal="mouse_exited" from="Interface/TextBox/Buttons/Rewind" to="." method="_on_gui_mouse_exited"]
[connection signal="option_selected" from="Interface/SelectionMenu" to="." method="_on_selection_menu_option_selected"]
[connection signal="mouse_entered" from="Interface/Pause" to="." method="_on_gui_mouse_entered"]
[connection signal="mouse_exited" from="Interface/Pause" to="." method="_on_gui_mouse_exited"]
[connection signal="pressed" from="Interface/Pause" to="." method="_on_pause_pressed"]
[connection signal="hidden" from="Interface/Logger" to="." method="_on_logger_close_pressed"]
[connection signal="pressed" from="Interface/Logger/Close" to="." method="_on_logger_close_pressed"]
